Fri Oct  5 23:09:40 UTC 2012  Steve Huston  <shuston@riverace.com>

        * ace/Sig_Handler.{cpp, inl}: Initialize signal_handlers_ array.

        * ace/WFMO_Reactor.cpp: Shut things down in close() and make all the
          info changes to avoid referencing unregistered handlers later, when
          they may be invalid. The lifetime can't be controlled via close() as
          it can via remove_handler() so be sure no references bleed out.

        * tests/Bug_2368_Regression_Test.cpp: Clean up text literals.

Thu Oct  4 10:24:52 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * include/makeinclude/platform_linux_icc.GNU:
          Added support for c++11 as feature

Wed Oct  3 09:59:08 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * include/makeinclude/platform_linux_icc.GNU:
          Added support for coverage which enabled code coverage with
          Intel C++

Thu Sep 27 06:30:22 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/config-g++-common.h:
          Introduced a new ACE_HAS_CPP11 which is set with GCC 4.7 at
          the moment the C++11 features are enabled

        * tests/Compiler_Features_15_Test.cpp:
        * tests/Compiler_Features_16_Test.cpp:
        * tests/Compiler_Features_17_Test.cpp:
        * tests/Compiler_Features_18_Test.cpp:
        * tests/run_test.lst:
        * tests/tests.mpc:
          Added some new compiler tests to validate the compiler C++11
          support

Mon Sep 24 12:56:50 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/valgrind.supp:
          Extended this file to work on OpenSuSE 12.2

Fri Sep 21 08:06:31 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * include/makeinclude/platform_linux_icc.GNU:
          Use -Wno-deprecated with C++11 due to the heavy usage of auto_ptr

Thu Sep 20 07:09:41 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/Network_Adapters_Test.cpp:
          Removed arg_unused macros.
