@@ -52,12 +52,6 @@ sig_atomic_t ACE_Sig_Handler::sig_pending_ = 0;
 
 ACE_ALLOC_HOOK_DEFINE(ACE_Sig_Handler)
 
-ACE_Sig_Handler::ACE_Sig_Handler (void)
-{
-  for (int s = 1; s < ACE_NSIG; ++s)
-    ACE_Sig_Handler::signal_handlers_[s] = 0;
-}
-
 ACE_Sig_Handler::~ACE_Sig_Handler (void)
 {
   for (int s = 1; s < ACE_NSIG; ++s)
